# advent-of-code

./: .gitignore  advoc23.cabal  default.nix  flake.nix  shell.nix
app/: Main.hs
src/: Day1.hs  Day2.hs  Day4.hs
