cabal-version: 3.0
name:          advoc23
version:       0.1.0
license:       MIT

library
    exposed-modules:  Day1
    hs-source-dirs:   src
    default-language: Haskell2010
    build-depends:
        base ^>= 4.17.2.0

executable advoc23
    main-is:          Main.hs
    hs-source-dirs:   app
    default-language: Haskell2010
    build-depends:
        base ^>= 4.17.2.0
      , advoc23
      , http-conduit
